fix: align dropdown and reduce vertical spacing for improved UX

--- a/decidim-budgets/app/packs/stylesheets/budgets.scss
+++ b/decidim-budgets/app/packs/stylesheets/budgets.scss
@@ -69,6 +69,12 @@
     }
   }
 
+  &__projects {
+    @apply -mt-12 sm:mt-0;
+  }
+
+
+
   &__card__list-project {
     @apply ml-auto rounded py-3 px-4 bg-background w-[30%] min-w-[120px] flex flex-col justify-center items-center lg:flex-row lg:justify-around lg:place-items-center;
   }
@@ -130,7 +136,7 @@
   }
 
   &__list--header {
-    @apply flex items-center justify-between;
+    @apply flex items-center -ml-2 sm:ml-0;
   }
 
   &-list {
